# LainNet

./: .env.example  .gitignore  Makefile  README.md  claude-sandbox.config.json  lain.ps1  pyproject.toml  test.py
docker/: Dockerfile  envd.py
scripts/: install.py
tools/user_memory/: README.md  index.js  package-lock.json  package.json  setup.bat  start.bat
